index.html agregada descripcion por defecto

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,9 +13,9 @@
 
 <body>
   <div class="content" id="fecha_hora">
-    <div id="dia_semana"></div>
-    <div id="fecha"></div>
-    <div id="hora"></div>
+    <div id="dia_semana">Dia semana</div>
+    <div id="fecha">Fecha</div>
+    <div id="hora">Hora</div>
   </div>
 
   <!-- CUSTOM JS -->
